<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright (c) 2008 Sonatype, Inc.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the Eclipse Public License v1.0
  which accompanies this distribution, and is available at
  http://www.eclipse.org/legal/epl-v10.html
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <prerequisites>
    <maven>3.0</maven>
  </prerequisites>

  <groupId>org.maven.ide.eclipse</groupId>
  <artifactId>parent</artifactId>
  <version>0.10.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Maven Integration for Eclipse (parent)</name>
  <description>Maven Integration for Eclipse provides tight integration for Maven into the IDE</description>
  <url>http://m2eclipse.codehaus.org/</url>
  <inceptionYear>2005</inceptionYear>

  <properties>
    <m2eclipse.version>0.10.0-SNAPSHOT</m2eclipse.version>

    <maven_embedder.version>${m2eclipse.version}</maven_embedder.version>
    <maven.version>3.0-alpha-5</maven.version>

    <archetype_common.version>2.0.2.200911171109</archetype_common.version>
    <archetype.version>2.0-alpha-4</archetype.version>

    <maven_model_edit.version>1.0.0-SNAPSHOT</maven_model_edit.version>
    <maven_pom.version>1.0.0-SNAPSHOT</maven_pom.version>

    <nexus_indexer.version>2.0.5-SNAPSHOT</nexus_indexer.version>

    <maven_scm.version>1.0.0.20080602-2350</maven_scm.version>

    <!-- disable accidental deployment -->
    <m2e.releases>http://localhost</m2e.releases>
    <m2e.snapshots>http://localhost</m2e.snapshots>
    <m2e.site>http://localhost</m2e.site>
    <m2e.site-compressed>http://repository.sonatype.org/service/local/repositories/forge-sites/content-compressed/</m2e.site-compressed>

    <tycho-version>0.7.0</tycho-version>
  </properties>

  <organization>
    <name>Sonatype, Inc.</name>
    <url>http://www.sonatype.com</url>
  </organization>

  <licenses>
    <license>
      <name>Eclipse Public License - v 1.0</name>
      <url>http://www.eclipse.org/legal/epl-v10.html</url>
    </license>
  </licenses>

  <issueManagement>
    <url>https://issues.sonatype.org/browse/MNGECLIPSE</url>
    <system>JIRA</system>
  </issueManagement>

  <scm>
    <connection>scm:svn:http://svn.sonatype.org/m2eclipse/trunk/org.maven.ide.eclipse.parent</connection>
    <developerConnection>scm:svn:https://svn.sonatype.org/m2eclipse/trunk/org.maven.ide.eclipse.parent</developerConnection>
  </scm>

  <ciManagement>
    <system>Hudson</system>
    <url>https://ci.sonatype.org/job/m2eclipse-with-e33/</url>
  </ciManagement>

  <modules>
    <module>../org.maven.ide.eclipse.maven_embedder</module>
    <module>../org.maven.ide.eclipse.archetype_common</module>
    <module>../org.maven.ide.eclipse.nexus_indexer</module>
    <module>../org.maven.ide.eclipse.maven_model_edit</module>
    <module>../org.maven.ide.eclipse.maven_scm</module>
    <module>../org.maven.ide.eclipse.dependency_tree</module>

    <!--
    <module>../org.maven.ide.eclipse.cliresolver</module>
    -->

    <module>../org.maven.ide.eclipse</module>
    <module>../org.maven.ide.eclipse.launching</module>
    <module>../org.maven.ide.eclipse.jdt</module>
    <module>../org.maven.ide.eclipse.mylyn3</module>
    <module>../org.maven.ide.eclipse.subclipse</module>
    <module>../org.maven.ide.eclipse.scm</module>
    <module>../org.maven.ide.eclipse.cvs</module>
    <module>../org.maven.ide.eclipse.refactoring</module>
    <module>../org.maven.ide.eclipse.editor.xml</module>
    <module>../org.maven.ide.eclipse.editor</module>
    <module>../org.maven.ide.eclipse.pr</module>

    <module>../org.maven.ide.eclipse.tests.common</module>
    <module>../org.maven.ide.eclipse.tests</module>
    <module>../org.maven.ide.eclipse.editor.xml.tests</module>
    <module>../org.maven.ide.eclipse.pr.tests</module>
   
    <module>../org.maven.ide.eclipse.wtp</module>
    <module>../org.maven.ide.eclipse.wtp.tests</module>

    <!-- features -->
    <module>../org.maven.ide.eclipse.feature</module>
    <module>../org.maven.ide.eclipse.wtp.feature</module>
    <module>../org.maven.ide.eclipse.sdk.feature</module>

    <module>../org.maven.ide.eclipse.scm.feature</module>
    <module>../org.maven.ide.eclipse.cvs.feature</module>
    <module>../org.maven.ide.eclipse.subclipse.feature</module>

    <module>../org.maven.ide.eclipse.mylyn3.feature</module>

    <module>../org.maven.ide.eclipse.plexus.annotations</module>
    <module>../org.maven.ide.eclipse.temporary.mojos</module>
    <module>../org.maven.ide.eclipse.temporary.mojos.feature</module>
    <module>../org.maven.ide.eclipse.plexus.annotations.tests</module>
    <module>../org.maven.ide.eclipse.modello.tests</module>

    <module>../org.maven.ide.eclipse.site</module>
    <module>../org.maven.ide.eclipse.site-extras</module>

    <module>../target-platform</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <!-- m2eclipse -->
      <dependency>
        <groupId>org.maven.ide.eclipse</groupId>
        <artifactId>org.maven.ide.eclipse</artifactId>
        <version>${m2eclipse.version}</version>
      </dependency>
      <dependency>
        <groupId>org.maven.ide.eclipse</groupId>
        <artifactId>org.maven.ide.eclipse.mylyn</artifactId>
        <version>${m2eclipse.version}</version>
      </dependency>
      <dependency>
        <groupId>org.maven.ide.eclipse</groupId>
        <artifactId>org.maven.ide.eclipse.mylyn3</artifactId>
        <version>${m2eclipse.version}</version>
      </dependency>
      <dependency>
        <groupId>org.maven.ide.eclipse</groupId>
        <artifactId>org.maven.ide.eclipse.subclipse</artifactId>
        <version>${m2eclipse.version}</version>
      </dependency>
      <dependency>
        <groupId>org.maven.ide.eclipse</groupId>
        <artifactId>org.maven.ide.eclipse.cliresolver</artifactId>
        <version>${m2eclipse.version}</version>
      </dependency>

      <!--  components -->
      <dependency>
        <groupId>org.maven.ide.eclipse</groupId>
        <artifactId>org.maven.ide.eclipse.maven_embedder</artifactId>
        <version>${maven_embedder.version}</version>
      </dependency>
      <dependency>
        <groupId>org.maven.ide.eclipse</groupId>
        <artifactId>org.maven.ide.eclipse.maven_scm</artifactId>
        <version>${maven_scm.version}</version>
      </dependency>
      <dependency>
        <groupId>org.maven.ide.eclipse</groupId>
        <artifactId>org.maven.ide.eclipse.archetype_common</artifactId>
        <version>${archetype_common.version}</version>
      </dependency>
      <dependency>
        <groupId>org.maven.ide.eclipse</groupId>
        <artifactId>org.maven.ide.eclipse.nexus_indexer</artifactId>
        <version>${nexus_indexer.version}</version>
      </dependency>
      <dependency>
        <groupId>org.maven.ide.eclipse</groupId>
        <artifactId>org.maven.ide.eclipse.pom</artifactId>
        <version>${maven_pom.version}</version>
      </dependency>
      <dependency>
        <groupId>org.maven.ide.eclipse</groupId>
        <artifactId>org.maven.ide.eclipse.maven_model_edit</artifactId>
        <version>${maven_model_edit.version}</version>
      </dependency>

      <dependency>
        <groupId>org.codehaus.plexus</groupId>
        <artifactId>plexus-utils</artifactId>
        <version>1.5.15</version>
      </dependency>

      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-embedder</artifactId>
        <version>${maven.version}</version>
        <exclusions>
          <exclusion>
            <groupId>xml-apis</groupId>
            <artifactId>xml-apis</artifactId>
          </exclusion>
          <exclusion>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <dependency>
        <groupId>org.apache.maven.archetype</groupId>
        <artifactId>archetype-common</artifactId>
        <version>${archetype.version}</version>
        <exclusions>
          <exclusion>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
          </exclusion>
          <exclusion>
            <artifactId>xml-apis</artifactId>
            <groupId>xml-apis</groupId>
          </exclusion>
          <exclusion>
            <groupId>velocity</groupId>
            <artifactId>velocity-dep</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.sonatype.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho-version}</version>
        <extensions>true</extensions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <configuration>
          <tagBase>https://svn.sonatype.org/m2eclipse/tags</tagBase>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.sonatype.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho-version}</version>
        <configuration>
          <resolver>p2</resolver>
          <target>
            <artifact>
              <groupId>org.maven.ide.eclipse</groupId>
              <artifactId>target-platform</artifactId>
              <version>${m2eclipse.version}</version>
              <classifier>${target.platform}</classifier>
            </artifact>
          </target>
          <ignoreTychoRepositories>true</ignoreTychoRepositories>
        </configuration>
      </plugin>

    </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.sonatype.tycho</groupId>
          <artifactId>maven-osgi-lifecycle-plugin</artifactId>
          <version>${tycho-version}</version>
        </plugin>
        <plugin>
          <groupId>org.sonatype.tycho</groupId>
          <artifactId>maven-osgi-packaging-plugin</artifactId>
          <version>${tycho-version}</version>
        </plugin>
        <plugin>
          <groupId>org.sonatype.tycho</groupId>
          <artifactId>maven-osgi-compiler-plugin</artifactId>
          <version>${tycho-version}</version>
        </plugin>
        <plugin>
          <groupId>org.sonatype.tycho</groupId>
          <artifactId>maven-osgi-test-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <useUIHarness>true</useUIHarness>
            <includes>
              <include>**/*Test.java</include>
            </includes>
            <argLine>${tycho.test.jvmArgs}</argLine>
            <!-- kill test JVM it tests take more than 10 minutes (600 seconds) to finish -->
            <forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.sonatype.tycho</groupId>
          <artifactId>maven-osgi-compiler-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <source>1.5</source>
            <target>1.5</target>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <pluginRepositories>
    <pluginRepository>
      <id>sonatype-public</id>
      <url>http://repository.sonatype.org/content/groups/sonatype-public-grid</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <enabled>true</enabled>
      </releases>
    </pluginRepository>
  </pluginRepositories>

  <distributionManagement>
    <repository>
      <id>forge-releases</id>
      <url>${m2e.releases}</url>
    </repository>
    <snapshotRepository>
      <id>forge-snapshots</id>
      <url>${m2e.snapshots}</url>
    </snapshotRepository>
    <site>
      <id>m2e-site</id>
      <url>${m2e.site}</url>
    </site>
  </distributionManagement>

  <profiles>
    <profile>
      <id>sun-jvm</id>
      <activation>
        <property>
          <name>java.vendor.url</name>
          <value>http://java.sun.com/</value>
        </property>
      </activation>
      <properties>
        <target.platform>m2e-e35</target.platform>        
        <tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
      </properties>
    </profile>
    <profile>
      <id>osx</id>
      <activation>
        <property>
          <name>java.vendor.url</name>
          <value>http://www.apple.com/</value>
        </property>
      </activation>
      <properties>
        <target.platform>m2e-e35-nowt</target.platform>        
        <tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m -Dosgi.ws=cocoa -XstartOnFirstThread</tycho.test.jvmArgs>
        <osgi.ws>cocoa</osgi.ws>
      </properties>      
    </profile>
    
    <profile>
      <id>windowtester</id>
      <modules>
        <module>../org.maven.ide.eclipse.integration.tests</module>
        <module>../org.maven.ide.eclipse.editor.tests</module>
      </modules>
    </profile>

  </profiles>

  <developers>
    <developer>
      <id>eu</id>
      <name>Eugene Kuleshov</name>
      <organization>Sonatype Inc.</organization>
      <timezone>-5</timezone>
    </developer>
    <developer>
      <id>jvanzyl</id>
      <name>Jason van Zyl</name>
      <organization>Sonatype Inc.</organization>
      <timezone>-8</timezone>
    </developer>
    <developer>
      <id>vsiveton</id>
      <name>Vincent Siveton</name>
      <email>vsiveton@apache.org</email>
      <organization>ASF</organization>
      <timezone>-5</timezone>
    </developer>
    <developer>
      <id>ifedorenko</id>
      <name>Igor Fedorenko</name>
      <organization>Sonatype Inc.</organization>
      <timezone>-5</timezone>
    </developer>
    <developer>
      <id>akraev</id>
      <name>Anton Kraev</name>
      <timezone>-5</timezone>
    </developer>
    <developer>
      <id>hboutemy</id>
      <name>Hervé Boutemy</name>
    </developer>
    <developer>
      <id>krel</id>
      <name>Lukáš Křečan</name>
    </developer>
  </developers>

  <mailingLists>
    <mailingList>
      <name>Users List</name>
      <subscribe>user-subscribe@m2eclipse.codehaus.org</subscribe>
      <unsubscribe>user-unsubscribe@m2eclipse.codehaus.org</unsubscribe>
      <post>user@m2eclipse.codehaus.org</post>
      <archive>http://archive.m2eclipse.codehaus.org/user</archive>
    </mailingList>
    <mailingList>
      <name>Developer List</name>
      <subscribe>dev-subscribe@m2eclipse.codehaus.org</subscribe>
      <unsubscribe>dev-unsubscribe@m2eclipse.codehaus.org</unsubscribe>
      <post>dev@m2eclipse.codehaus.org</post>
      <archive>http://archive.m2eclipse.codehaus.org/dev</archive>
    </mailingList>
    <mailingList>
      <name>Commits List</name>
      <subscribe>scm-subscribe@m2eclipse.codehaus.org</subscribe>
      <unsubscribe>scm-unsubscribe@m2eclipse.codehaus.org</unsubscribe>
      <post>scm@m2eclipse.codehaus.org</post>
      <archive>http://archive.m2eclipse.codehaus.org/scm</archive>
    </mailingList>
  </mailingLists>

</project>
